--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,10 @@
   </head>
   <body>
     <h1>Hello world!</h1>
+    <div>
+      <span>Home</span>
+      <a href="/about">About</a>
+      <a href="/blog">Blogs</a>
+    </div>
   </body>
 </html>
