Create 3 blog posts

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,5 +18,15 @@
       <span>Blog</span>
     </div>
     <p>Below it will be a list of my latest blogs.</p>
+
+    <div>
+      <ul>
+        <li>
+          <a href="/posts/post-1">Steps followed in my first Astro project </a>
+        </li>
+        <li><a href="/posts/post-2">What is Lorem Ipsum?</a></li>
+        <li><a href="/posts/post-3">Why do we use Lorem Ipsum?</a></li>
+      </ul>
+    </div>
   </body>
 </html>
