--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "About Me!";
 ---
 
 <html lang="en">
@@ -8,10 +8,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>About Me</h1>
+    <h1>{pageTitle}</h1>
     <div>
       <a href="/">Home</a>
       <span>About</span>
