add dynamism with JavaScript

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,19 @@
 ---
+const pagetitle = "Homepage";
 
+const myInfo = {
+  name: "Aaron Park",
+  country: "South Korea",
+  occupation: "Scientist",
+  ProfessionalInterest: [
+    "Data science",
+    "Scientific visualization",
+    "Game art development",
+    "UI developer",
+  ],
+  skills: ["HTML", "CSS", "JavaScript", "Astro", "React", "Python", "Julia"],
+  hobbies: ["Run", "Play", "Meet with friends"],
+};
 ---
 
 <html lang="en">
@@ -8,14 +22,34 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pagetitle}</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>{pagetitle}</h1>
     <div>
       <span>Home</span>
       <a href="/about">About</a>
       <a href="/blog">Blogs</a>
+    </div>
+    <div>
+      <p>Hi! my name is {myInfo.name}. I am living in {myInfo.country}.</p>
+      <p>My professional interest are:</p>
+      <ul>
+        {myInfo.ProfessionalInterest.map((interest) => <li>{interest}</li>)}
+      </ul>
+      <p>My skills:</p>
+      <ul>
+        {myInfo.skills.map((skill) => <li>{skill}</li>)}
+      </ul>
+    </div>
+    <div>
+      {
+        myInfo.hobbies.length > 5 ? (
+          <p>I have quite a lot hobbies.</p>
+        ) : (
+          <p>I have only {myInfo.hobbies.length} hobbies.</p>
+        )
+      }
     </div>
   </body>
 </html>
