--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 ---
 
@@ -13,9 +14,7 @@ import "../styles/global.css";
   <body>
     <h1>My recent blogs</h1>
     <div>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <span>Blog</span>
+      <Navigation />
     </div>
     <p>Below it will be a list of my latest blogs.</p>
 
