--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 
 const pagetitle = "Homepage";
@@ -15,9 +16,7 @@ const pagetitle = "Homepage";
   <body>
     <h1>{pagetitle}</h1>
     <div>
-      <span>Home</span>
-      <a href="/about">About</a>
-      <a href="/blog">Blogs</a>
+      <Navigation />
     </div>
   </body>
 </html>
