Add Footer component with Social component in it

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pagetitle = "Homepage";
@@ -17,6 +18,9 @@ const pagetitle = "Homepage";
     <h1>{pagetitle}</h1>
     <div>
       <Navigation />
+    </div>
+    <div>
+      <Footer />
     </div>
   </body>
 </html>
