--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pageTitle = "About Me!";
@@ -66,6 +67,9 @@ const skillFontFamily = '"Courier New", Courier, monospace';
           <p>I have only {myInfo.hobbies.length} hobbies.</p>
         )
       }
+    </div>
+    <div>
+      <Footer />
     </div>
   </body>
 </html>
