--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
 
@@ -26,6 +27,9 @@ import "../styles/global.css";
         <li><a href="/posts/post-2">What is Lorem Ipsum?</a></li>
         <li><a href="/posts/post-3">Why do we use Lorem Ipsum?</a></li>
       </ul>
+    </div>
+    <div>
+      <Footer />
     </div>
   </body>
 </html>
