Wrap Navigation in the new component Header

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
@@ -14,9 +14,7 @@ import "../styles/global.css";
   </head>
   <body>
     <h1>My recent blogs</h1>
-    <div>
-      <Navigation />
-    </div>
+    <Header />
     <p>Below it will be a list of my latest blogs.</p>
 
     <div>
