--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
@@ -45,9 +45,7 @@ const skillFontFamily = '"Courier New", Courier, monospace';
   </head>
   <body>
     <h1>{pageTitle}</h1>
-    <div>
-      <Navigation />
-    </div>
+    <Header />
     <div>
       <p>Hi! my name is {myInfo.name}. I am living in {myInfo.country}.</p>
       <p>My professional interest are:</p>
