--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 import "../styles/global.css";
 
 const pagetitle = "Homepage";
@@ -16,9 +16,7 @@ const pagetitle = "Homepage";
   </head>
   <body>
     <h1>{pagetitle}</h1>
-    <div>
-      <Navigation />
-    </div>
+    <Header />
     <div>
       <Footer />
     </div>
