add navbar with toggle button

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,5 +69,8 @@ const skillFontFamily = '"Courier New", Courier, monospace';
     <div>
       <Footer />
     </div>
+    <script>
+      import "../scripts/menu";
+    </script>
   </body>
 </html>
