--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -29,5 +29,8 @@ import "../styles/global.css";
     <div>
       <Footer />
     </div>
+    <script>
+      import "../scripts/menu";
+    </script>
   </body>
 </html>
