--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,5 +20,8 @@ const pagetitle = "Homepage";
     <div>
       <Footer />
     </div>
+    <script>
+      import "../scripts/menu";
+    </script>
   </body>
 </html>
