--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,7 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "About Me!";
+const pageTitle = "About me!";
 
 const myInfo = {
   name: "Aaron Park",
@@ -24,53 +22,25 @@ const skillColor = "navy";
 const skillFontFamily = '"Courier New", Courier, monospace';
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-    <style define:vars={{ skillColor, skillFontFamily }}>
-      h1 {
-        color: teal;
-        font-size: 4rem;
-      }
-      .skill {
-        font-family: var(--skillFontFamily);
-        font-weight: bold;
-        color: var(--skillColor);
-      }
-    </style>
-  </head>
-  <body>
-    <h1>{pageTitle}</h1>
-    <Header />
-    <div>
-      <p>Hi! my name is {myInfo.name}. I am living in {myInfo.country}.</p>
-      <p>My professional interest are:</p>
-      <ul>
-        {myInfo.ProfessionalInterest.map((interest) => <li>{interest}</li>)}
-      </ul>
-      <p>My skills:</p>
-      <ul>
-        {myInfo.skills.map((skill) => <li class="skill">{skill}</li>)}
-      </ul>
-    </div>
-    <div>
-      {
-        myInfo.hobbies.length > 5 ? (
-          <p>I have quite a lot hobbies.</p>
-        ) : (
-          <p>I have only {myInfo.hobbies.length} hobbies.</p>
-        )
-      }
-    </div>
-    <div>
-      <Footer />
-    </div>
-    <script>
-      import "../scripts/menu";
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <div>
+    <p>Hi! my name is {myInfo.name}. I am living in {myInfo.country}.</p>
+    <p>My professional interest are:</p>
+    <ul>
+      {myInfo.ProfessionalInterest.map((interest) => <li>{interest}</li>)}
+    </ul>
+    <p>My skills:</p>
+    <ul>
+      {myInfo.skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+  </div>
+  <div>
+    {
+      myInfo.hobbies.length > 5 ? (
+        <p>I have quite a lot hobbies.</p>
+      ) : (
+        <p>I have only {myInfo.hobbies.length} hobbies.</p>
+      )
+    }
+  </div>
+</BaseLayout>
