--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,36 +1,19 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "My Blogs";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>My recent blogs</h1>
-    <Header />
-    <p>Below it will be a list of my latest blogs.</p>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Below it will be a list of my latest blogs.</p>
 
-    <div>
-      <ul>
-        <li>
-          <a href="/posts/post-1">Steps followed in my first Astro project </a>
-        </li>
-        <li><a href="/posts/post-2">What is Lorem Ipsum?</a></li>
-        <li><a href="/posts/post-3">Why do we use Lorem Ipsum?</a></li>
-      </ul>
-    </div>
-    <div>
-      <Footer />
-    </div>
-    <script>
-      import "../scripts/menu";
-    </script>
-  </body>
-</html>
+  <div>
+    <ul>
+      <li>
+        <a href="/posts/post-1">Steps followed in my first Astro project </a>
+      </li>
+      <li><a href="/posts/post-2">What is Lorem Ipsum?</a></li>
+      <li><a href="/posts/post-3">Why do we use Lorem Ipsum?</a></li>
+    </ul>
+  </div>
+  <div></div>
+</BaseLayout>
