--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,8 @@
 ---
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
-import "../styles/global.css";
-
-const pagetitle = "Homepage";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "My Home Page";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pagetitle}</title>
-  </head>
-  <body>
-    <h1>{pagetitle}</h1>
-    <Header />
-    <div>
-      <Footer />
-    </div>
-    <script>
-      import "../scripts/menu";
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>Hi! This is my home page!</h2>
+</BaseLayout>
