--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@ html {
   h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
+    text-align: center;
   }
 
 /* nav styles */
@@ -32,14 +33,12 @@ html {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #073058;
 }
 
 .nav-links {
-  width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: skyblue;
   display: none;
   margin: 0;
 }
@@ -48,15 +47,15 @@ html {
   display: block;
   text-align: center;
   padding: 10px 0;
+  margin: 0 10px;
   text-decoration: none;
-  font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  background-color: #d7ebff;
 }
 
 .expanded {
@@ -65,11 +64,10 @@ html {
 
 @media screen and (min-width: 636px) {
   .nav-links {
-    margin-left: 5em;
-    display: block;
+    display: flex;
+    justify-content: center;
     position: static;
     width: auto;
-    background: pink;
   }
 
   .nav-links a {
