--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 const pageTitle = "My Blogs";
+const allPosts = await Astro.glob("./posts/*.md");
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -8,11 +10,14 @@ const pageTitle = "My Blogs";
 
   <div>
     <ul>
-      <li>
-        <a href="/posts/post-1">Steps followed in my first Astro project </a>
-      </li>
-      <li><a href="/posts/post-2">What is Lorem Ipsum?</a></li>
-      <li><a href="/posts/post-3">Why do we use Lorem Ipsum?</a></li>
+      {
+        allPosts.map((post) => (
+          <BlogPost
+            blogPostUrl={post.url}
+            blogPostTitle={post.frontmatter.title}
+          />
+        ))
+      }
     </ul>
   </div>
   <div></div>
