add an RSS feed url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,4 +5,5 @@ const pageTitle = "My Home Page";
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>Hi! This is my home page!</h2>
+  <p>You subscribe to my RSS feed, check it out <a href="http://localhost:4321/rss.xml">here!</a></p>
 </BaseLayout>
